[package]
name = "walrus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = "0.2.1"
whois-rust = "1.5.1"
ipnetwork = "0.17"
structopt = "0.3.26"
indicatif = "0.17.5"
chrono = "0.4.26"
csv = "1.2.2"
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"
encoding_rs_io = "0.1.7"